Update to  index.html

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <footer>
     <div class="footer-content">
       <p>&copy; 2023 CALIDO LLC. All rights reserved.</p>
-      <p><a href="/terms-of-service">Terms of Service</a></p>
+      <p><a href="/terms.txt">Terms of Service</a></p>
     </div>
   </footer>
   <div class="footer-decor"></div>
